--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
     </ul>
 </div>
 
- <form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/Zeove" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Zeove', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
+ <form style="border:0px solid #ccc;padding:3px;text-align:right;" action="https://tinyletter.com/Zeove" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Zeove', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">输入你的邮件地址</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="订阅" /></form>
          
 
 <!--
