--- a/404.html
+++ b/404.html
@@ -6,4 +6,4 @@ permalink: /404.html
 
 <p><a class="post__back" href="/">&lt;-- back</a></p>
 <br>
-<p>Sorry this page does not exist...</p>
+<p>页面不存在，估计博主又瞎鸡巴乱搞了...</p>
