--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 <!--
 <div class="music">
     <h1>Now Playing:</h1>
-    <a href="http://www.last.fm/user/getmicah"><span id="nowPlaying"></span></a>
+    <a href="https://y.qq.com/n/m/detail/taoge/index.html?id=4238914381"><span id="nowPlaying"></span></a>
 </div>
 <script src="/assets/js/main.js"></script>
 -->
