--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 <!--
 <div class="music">
     <h1>Now Playing:</h1>
-    <a href="https://cyixlq.gitee.io/iframe/#/tencent/4238914381/true"><span id="nowPlaying"></span></a>
+    <a href="http://www.last.fm/user/getmicah"><span id="nowPlaying"></span></a>
 </div>
 <script src="/assets/js/main.js"></script>
 -->
