--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ layout: default
         {% endfor %}
     </ul>
 </div>
-
+<!--
 <div class="music">
     <h1>Now Playing:</h1>
-    <a href="https://music.163.com/outchain/player?type=2&id=1376653715&auto=1&height=66"><span id="1376653715"></span></a>
+    <a href="http://www.last.fm/user/getmicah"><span id="nowPlaying"></span></a>
 </div>
 <script src="/assets/js/main.js"></script>
-
+-->
