--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ layout: default
         </li>
         {% endfor %}
     </ul>
+	
+<object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/pendulumclock/pendulumClockV2.swf?" width="300" height="200"><param name="movie" value="http://cdn.abowman.com/widgets/pendulumclock/pendulumClockV2.swf?"></param><param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param><param name="bgcolor" value=""/></object>
+	
 </div>
 <!--
 <div class="music">
